--- a/style.css
+++ b/style.css
@@ -1,181 +1,203 @@
-*{
+* {
     margin: 0px;
 }
 
- 
-.home1{
+
+.home1 {
     list-style-type: none;
     margin-top: 20px;
 
 }
-#sidebar{
+
+#sidebar {
     position: fixed;
-  color: white;
-   width: 250px;
-height: 800px;
-margin: auto;
+    color: white;
+    width: 250px;
+    height: 800px;
+    margin: auto;
 
-background: #000;
+    background: #000;
 }
 
-#sidebar>img{
+#sidebar>img {
     width: 160px;
-height: 40px;
-padding: 20px;
+    height: 40px;
+    padding: 20px;
 }
-.home1>li>img{
-width: 20px;
-height: 30px;
-flex-shrink: 0;
-margin-right: 20px;
+
+.home1>li>img {
+    width: 20px;
+    height: 30px;
+    flex-shrink: 0;
+    margin-right: 20px;
 
 }
-.homme{
- border-radius: 6px;
-background: #282828;
-width: 200px;
-height: 35px;
-flex-shrink: 0;
-padding-left: 5px;
+
+.homme {
+    border-radius: 6px;
+    background: #282828;
+    width: 200px;
+    height: 35px;
+    flex-shrink: 0;
+    padding-left: 5px;
 }
-.home1>li{
-display: flex;
-align-items: center;
-line-height: 30px;
-color: #FFF;
-font-family: DM Sans;
-font-size: 19px;
-font-style: normal;
+
+.home1>li {
+    display: flex;
+    align-items: center;
+    line-height: 30px;
+    color: #FFF;
+    font-family: DM Sans;
+    font-size: 19px;
+    font-style: normal;
 
 
 
 }
-.nav2>ul{
+
+.nav2>ul {
     list-style-type: none;
 }
-.nav2{
+
+.nav2 {
     margin-top: 35px;
 }
-.nav2>ul>li{
-line-height: 35px;
-color: #FFF;
-font-family: DM Sans;
-font-size: 19px;
-font-style: normal;
+
+.nav2>ul>li {
+    line-height: 35px;
+    color: #FFF;
+    font-family: DM Sans;
+    font-size: 19px;
+    font-style: normal;
 
 }
-.navbot{
+
+.navbot {
     display: flex;
     justify-content: space-around;
     margin-top: 30px;
     align-items: center;
 }
-.line1{
+
+.line1 {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-top: 0px;
     padding: 20px;
 }
-#musicpage{
-    
-   margin-left: 250px;
+
+#musicpage {
+
+    margin-left: 250px;
     width: 1340px;
     height: 1150px;
     flex-shrink: 0;
     background: linear-gradient(180deg, #222 0%, #1F1F1F 11.64%, #171717 25.66%, #161616 32.94%, #151515 35.98%, #131313 44.89%, #121212 55.22%, #121212 75.34%, #121212 85.45%, rgba(18, 18, 18, 0.00) 100%);
 }
-.line1>div{
+
+.line1>div {
     display: flex;
     align-items: center;
     justify-content: space-around;
     color: #FFF;
-font-family: DM Sans;
-font-size: 20px;
-font-weight: 700;
-border-radius: 33px;
-background: #0A0A0A;
-width: 147px;
-height: 41px;
-flex-shrink: 0;
+    font-family: DM Sans;
+    font-size: 20px;
+    font-weight: 700;
+    border-radius: 33px;
+    background: #0A0A0A;
+    width: 147px;
+    height: 41px;
+    flex-shrink: 0;
 }
-.play1{
+
+.play1 {
     display: flex;
     width: 362px;
-height: 100px;
-flex-shrink: 0;
-border-radius: 4px;
-background: #303030;
+    height: 100px;
+    flex-shrink: 0;
+    border-radius: 4px;
+    background: #303030;
 }
-#playlist{
-   margin:auto;
-   width: 80vw;
- 
-  
+
+#playlist {
+    margin: auto;
+    width: 80vw;
+
+
 }
-#playlist>h1{
-  margin-top: 35px;
-  color: #FFF;
-font-family: DM Sans;
-font-size: 35px;
-font-style: normal;
-font-weight: 700;
-line-height: normal;
-letter-spacing: -1.14px;
+
+#playlist>h1 {
+    margin-top: 35px;
+    color: #FFF;
+    font-family: DM Sans;
+    font-size: 35px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    letter-spacing: -1.14px;
 }
-#playlist>div{
+
+#playlist>div {
     display: flex;
     gap: 20px;
     margin-top: 30px;
     flex-wrap: wrap;
-   
+
 }
-.play1>h3{
+
+.play1>h3 {
     display: flex;
-    align-items:center ;
+    align-items: center;
     padding-inline: 50px;
     color: #FFF;
-font-family: DM Sans;
-font-size: 20px;
-font-style: normal;
-font-weight: 700;
-line-height: normal;
-letter-spacing: -0.4px;
+    font-family: DM Sans;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    letter-spacing: -0.4px;
 }
-.play1>img{
+
+.play1>img {
     width: 100px;
-height: 100px;
-flex-shrink: 0;
-border-radius: 4px 0px 0px 4px;
-background: linear-gradient(135deg, #4000F4 0%, #603AED 22.48%, #7C6EE6 46.93%, #979FE1 65.71%, #A2B3DE 77.68%, #ADC8DC 88.93%, #C0ECD7 100%);
+    height: 100px;
+    flex-shrink: 0;
+    border-radius: 4px 0px 0px 4px;
+    background: linear-gradient(135deg, #4000F4 0%, #603AED 22.48%, #7C6EE6 46.93%, #979FE1 65.71%, #A2B3DE 77.68%, #ADC8DC 88.93%, #C0ECD7 100%);
 }
-#playlist1{
+
+#playlist1 {
     margin-top: 40px;
 }
-.line2{
- 
+
+.line2 {
+
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding-inline: 40px;
 }
-.line2>h3{
+
+.line2>h3 {
     color: #FFF;
-font-family: DM Sans;
-font-size: 25px;
-font-weight: 700;
-letter-spacing: -1.16px;
+    font-family: DM Sans;
+    font-size: 25px;
+    font-weight: 700;
+    letter-spacing: -1.16px;
 }
-.line2>p{
+
+.line2>p {
     color: #B3B3B3;
-font-family: DM Sans;
-font-size: 17px;
-font-style: normal;
-font-weight: 700;
-line-height: normal;
-letter-spacing: 0.68px;
+    font-family: DM Sans;
+    font-size: 17px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    letter-spacing: 0.68px;
 }
-.box{
+
+.box {
     display: flex;
     gap: 20px;
     flex-wrap: wrap;
@@ -184,94 +206,127 @@ letter-spacing: 0.68px;
     align-items: center;
     margin-top: 30px;
 }
-.play2{
-background: #181818; 
- width: 220px;
-height: 220px;
-flex-shrink: 0;
 
-padding: 15px;
+.play2 {
+    background: #181818;
+    width: 220px;
+    height: 220px;
+    flex-shrink: 0;
+
+    padding: 15px;
 }
-.play2>img{
-width: 180px;
-height: 160px;
-flex-shrink: 0;
-border-radius: 14px;
-background: linear-gradient(180deg, rgba(0, 0, 0, 0.65) 0%, rgba(0, 0, 0, 0.23) 26.44%), url(<path-to-image>), lightgray 50% / cover no-repeat;
+
+.play2>img {
+    width: 180px;
+    height: 160px;
+    flex-shrink: 0;
+    border-radius: 14px;
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0.65) 0%, rgba(0, 0, 0, 0.23) 26.44%), url(<path-to-image>), lightgray 50% / cover no-repeat;
 
 }
-.play2>h3{
-   margin-top: 20px;
-   color: #FFF;
-font-family: DM Sans;
-font-size: 20px;
-font-style: normal;
-font-weight: 400;
+
+.play2>h3 {
+    margin-top: 20px;
+    color: #FFF;
+    font-family: DM Sans;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
 }
-.play2>p{
+
+.play2>p {
     color: #B3B3B3;
     font-family: DM Sans;
     font-size: 15px;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
-    letter-spacing: 0.15px; 
+    letter-spacing: 0.15px;
 }
-#footer{
+
+#footer {
     position: fixed;
     width: 100vw;
-height: 120px;
-flex-shrink: 0;
-background: #181818;
-left: 0;
-bottom: 0;
+    height: 140px;
+    flex-shrink: 0;
+    left: 0;
+    bottom: 0;
 
 }
-.footer1{
-    height: 90px;
+
+.footer1 {
+    height: 80px;
     flex-shrink: 0;
     display: flex;
-justify-content: space-between;
-align-items: center;
-padding: 20px;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+    background: #181818;
 }
-.footer2{
+
+.footer2 {
     background: #1ED760;
     height: 30px;
-flex-shrink: 0;
+    flex-shrink: 0;
 }
-.songimage{
+
+.songimage {
     width: 200px;
     height: 40px;
-    flex-shrink: 0; 
+    flex-shrink: 0;
     display: flex;
-   align-items: center;
-   margin-top: 25px;
+    align-items: center;
+    margin-top: 25px;
     gap: 10px;
     padding: 10px;
 }
-.songimage>div>h2{
- color: #FFF;
-font-family: DM Sans;
-font-size: 15px;
-font-weight: 600;
-letter-spacing: -0.9px;
+
+.songimage>div>h2 {
+    color: #FFF;
+    font-family: DM Sans;
+    font-size: 15px;
+    font-weight: 600;
+    letter-spacing: -0.9px;
 }
-.songimage>p{
-color: #B3B3B3;
-font-family: DM Sans;
-font-size: 12px;
-font-style: normal;
-font-weight: 500;
-letter-spacing: -0.75px;
+
+.songimage>p {
+    color: #B3B3B3;
+    font-family: DM Sans;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 500;
+    letter-spacing: -0.75px;
 }
-.songimage1>img{
+
+.songimage1>img {
     width: 500px;
-height: 60px;
-flex-shrink: 0;
+    height: 50px;
+    flex-shrink: 0;
 }
-.songimage2>img{
+
+.songimage2>img {
     width: 240px;
-height: 30px;
+    height: 30px;
+    flex-shrink: 0;
+}
+.footer2>div{
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    padding-inline: 30px;
+}
+.footer2>div>img{
+    height: 18px;
+padding: 2.248px 1.35px 2.252px 1.35px;
 flex-shrink: 0;
+
+}
+.footer2>div>p{
+    color: #000;
+
+font-family: DM Sans;
+font-size: 17px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
 }
